-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 160805) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xxyy2005 (v2.4.3)  -** stable release **-
	- fixed: failed runtime check from eca-fileio-stream.cpp:159
	- fixed: eiam - ao-remove'ing JACK input/outputs caused a segfault
07082005 (v2.4.2)  -** stable release **-
	- note: verified to compile ok with gcc-4.0.0 and gcc-4.0.1 [kaiv]
	- added: eiam - ctrlp-list, ctrlp-selected, ctrlp-get, ctrlp-select
	         and ctrlp-set commands; the last two are RT-commands;
		 see ecasound-iam(1) for more info [allies]
	- added: ecasignalview - ability to reset stats with 'spacebar'
		 and quit with 'q/Q/Esc'; separate logarithmic mode (enable
	 	 with -L, see also -I which is still the default);
		 display of per-channel average amplitude; see 
		 ecasignalview(1) man page for details [jeffrey]
	- added: ecatrimsilence.sh to examples subdir [kaiv]
	- added: --keep-running (or -K) option to ecasound, do not exit
		 from batch mode when processing is finished/stopped;
		 especially useful when used in combination with JACK
		 inputs/outputs [kaiv]
	- changed: various small updates to User's Guide [kaiv]
	- changed: ecasound user-visible copyright string changed [kaiv]
	- changed: minor changes to ecasignalview user-interface
	           [jeffrey,kaiv]
        - changed: --daemon-mode does not anymore require running in 
		   interactive mode [kaiv]